--- a/sign-up-form.css
+++ b/sign-up-form.css
@@ -8,7 +8,6 @@ body {
   height: 100vh;
   margin: 0;
 }
-
 #left-part {
   flex: 4;
   position: relative;
@@ -59,4 +58,63 @@ body {
 }
 #right-part {
   flex: 6;
+}
+#hero-text p {
+  margin: 15% 70px 20px 40px;
+  font-weight: 600;
+  font-size: 18px;
+}
+h2 {
+  font-size: 18px;
+}
+#signup-form {
+  margin: 50px 40px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+.form-row {
+  display: flex;
+  flex-direction: row;
+  flex: 200px;
+  margin-bottom: 10px;
+}
+.form-group {
+  display: flex;
+  flex-direction: column;
+  display: grid;
+  grid-template-rows: auto auto;
+  gap: 2px;
+}
+.form-group input {
+  margin-right: 50px;
+  width: 200px;
+  height: 20px;
+  border: 1px solid #E5E7EB;
+  border-radius: 3px;
+}
+#password, #confirm-password:invalid {
+  border-color: red;
+}
+.form-group input:focus {
+  outline: 1px solid #3863ba;
+  border-radius: 3px;
+  box-shadow:2px 2px 2px rgb(198, 198, 198) ;
+}
+label {
+  font-size: 10px;
+  font-weight: bold;
+}
+#create-account-btn{
+  font-weight: bold;
+  background-color: #596D48;
+  color: #E5E7EB;
+  padding: 15px 45px;
+  border-radius: 5px;
+  border: none;
+  margin-left: 40px;
+}
+p {
+  margin-left: 40px;
 }
